--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.44.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
